--- a/index.html
+++ b/index.html
@@ -7,8 +7,41 @@
     <link rel="stylesheet" href="./frontend/style.css" />
     <title>Week-3-Task</title>
   </head>
-  <body>
-    <h1>Week-3-Task</h1>
+  <body class="main">
+    <div class="main-sec">
+        <div class="sec1">
+            <input type="text" class="inputDisplay" id="display" placeholder="0" readonly>
+    </div>
+    <div class="sec2">
+        <a href="#" class="sec2-sub" id="clear">C</a>
+        <a href="#" class="sec2-sub" id="division">/</a>
+        <a href="#" class="sec2-sub" id="multiplication">*</a>
+        <a href="#" class="sec2-sub" id="delete">&#8592;</a>
+    </div>
+    <div class="sec3">
+        <a href="#" class="sec3-sub" id="num7">7</a>
+        <a href="#" class="sec3-sub" id="num8">8</a>
+        <a href="#" class="sec3-sub" id="num9">9</a>
+        <a href="#" class="sec3-sub" id="subtract">-</a>
+    </div>
+    <div class="sec4">
+        <a href="#" class="sec4-sub" id="num4">4</a>
+        <a href="#" class="sec4-sub" id="num5">5</a>
+        <a href="#" class="sec4-sub" id="num6">6</a>
+        <a href="#" class="sec4-sub" id="add">+</a>
+    </div>
+    <div class="sec5">
+        <a href="#" class="sec5-sub" id="num1">1</a>
+        <a href="#" class="sec5-sub" id="num2">2</a>
+        <a href="#" class="sec5-sub" id="num3">3</a>
+        <a href="#" class="sec5-sub" id="point">.</a>
+    </div>
+    <div class="sec6">
+        <a href="#" class="sec6-sub" id="open-brac">(</a>
+        <a href="#" class="sec6-sub" id="num0">0</a>
+        <a href="#" class="sec6-sub" id="close-brac">)</a>
+        <a href="#" class="sec6-sub active" id="calc">=</a>
+    </div>
   </body>
   <script src="./frontend/script.js"></script>
 </html>
